<!--
  ~ WaterflyAndroid: a Firefly app for android, focusing on and streamlining the basics
  ~ Copyright (C) 2018  Atto Allas
  ~
  ~ This program is free software: you can redistribute it and/or modify
  ~ it under the terms of the GNU General Public License as published by
  ~ the Free Software Foundation, either version 3 of the License, or
  ~ (at your option) any later version.
  ~
  ~ This program is distributed in the hope that it will be useful,
  ~ but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~ MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~ GNU General Public License for more details.
  ~
  ~ You should have received a copy of the GNU General Public License
  ~ along with this program.  If not, see <http://www.gnu.org/licenses/>.
  -->

<resources>
    <string name="app_name">Waterfly</string>
    <string name="edit_message">Enter your username</string>
    <string name="button_send">Login</string>
    <string name="pass_message">Enter your password</string>
    <string name="button_view_tasks">View Tasks</string>
    <string name="button_view_notices">View Noticeboard</string>
    <string name="button_logout">Logout</string>
    <string name="main_welcome">Welcome to the dashboard</string>
    <string name="wait_string">Please wait…</string>
    <string name="logo_desc">Main logo for the main menu</string>
    <string name="login_string">Login to Firefly</string>
    <string name="set_by">Set by</string>
    <string name="due">Due</string>
    <string name="loading_string">Logging in…</string>
</resources>
